Added endpoints to wipe entries for WH and R
