# app.py
@@ -10,6 +10,7 @@ import content.providers as providers
 import content.genres as genres
 import simulations.userdata as usersim
 import simulations.watchhistory
+import simulations.recommendations
 import content.discovery.movie_providers as movie_providers
 import content.discovery.popular_movies as popular_movies
 
@@ -129,11 +130,21 @@ def simulation_watch_history():
     simulations.watchhistory.generate()
     session["sim_result"] = { "error": False, "message": "Simulated watch history has been generated!" }
     return redirect(url_for('simulation'))
+
 @app.route("/Simulation/WatchHistoryPattern")
 def simulation_patterns_watch_history():
     simulations.watchhistory.generate_pattern()
     session["sim_result"] = { "error": False, "message": "Simulated watch history has been generated!" }
     return redirect(url_for('simulation'))
+
+@app.route("/Simulation/Recommendations")
+def simulation_recommendations():
+    simulations.recommendations.generate()
+    session["sim_result"] = { "error": False, "message": "Simulated Recommendations Populated!" }
+    return redirect(url_for('simulation'))
+@app.route("/WatchHistory/Clear")
+def clear_watch_history():
+    
 
 
 @app.route("/Import")
