# userdata/recommendations.py
@@ -16,3 +16,8 @@ def add(entry):
 def lookup_by_id(user_id):
     recommendations = Recommendations.query.filter(Recommendations.user_id == user_id).all()
     return Recommendationss_schema.dump(recommendations), 201
+
+def clear_all():
+    db.session.query(Recommendations).delete()
+    db.session.commit()
+    return 200
